[tool.black]
include = '\.py$'
# Don't attempt to normalize strings
skip-string-normalization = true
# Tell Black that this code is specifically meant for 3.6 instead of using per-file detection.
# (without this, Black will only apply certain stylistic changes in the presence of 3.6+ syntax)
# For example, f-strings prove that code requires 3.6 and Black will format differently.
target_version = ["py36"]

[tool.isort]
known_first_party = "member"
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = [
  # Black handles all formatting
  'format',
  # I'm okay with TODO comments
  'fixme',
  # We use `db`, `ts`, etc. which don't adhere to the naming style
  'invalid-name',
  # Not all modules need a docstring
  'missing-module-docstring',
  # TODO:  Add docstrings to all classes & functions, then we can drop this.
  'missing-docstring',
]

[tool.pylint.REPORTS]
reports = false
score = false
[tool.poetry]
name = "mitoc-member"
version = "0.1.0"
description = "Processes MITOC memberships and waivers"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://mitoc-trips.mit.edu"
repository = "https://github.com/DavidCain/mitoc-member/"
authors = ["David Cain <davidjosephcain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
flask-mysql = "^1.0"
PyJWT = "*"
pytz = "*"
raven = { version = "*", extras = ["flask"] }
mitoc-const = "^0.4.0"

# Optional dependencies for determining code coverage
# Useful for local development and/or the build
# (Included here, since extras cannot refer to dev dependencies)
coverage = { version = "*", optional = true }
codecov = { version = "*", optional = true }

[tool.poetry.extras]
code_coverage = ["codecov", "coverage"]

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
pylint = "*"
pytest = "*"
